<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/beige">

    <Button
        android:id="@+id/button4"
        style="@android:style/Widget.Material.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/siguiente"
        android:onClick="IrSiguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="410dp"
        android:layout_height="318dp"
        android:contentDescription="@string/imagen_principal"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic"
        android:src="@drawable/img" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="318dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="?android:dividerHorizontal"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2">

        <LinearLayout
            android:layout_width="342dp"
            android:layout_height="45dp"
            android:divider="?android:dividerVertical"
            android:orientation="horizontal"
            android:showDividers="middle">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="86dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/nombre"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/brandon_corman_genovez"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/_30_04_2022"
            android:textSize="20sp"
            android:visibility="visible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>