<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
  android:background="@color/beige">

  <Button
      android:id="@+id/button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="116dp"
      android:text="@string/volver"
      android:onClick="Volver"
      android:background="@color/black"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toBottomOf="parent" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="wrap_content"
      android:layout_height="318dp"
      android:contentDescription="@string/imagen_principal"
      app:layout_constraintBottom_toTopOf="@+id/divider2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:src="@drawable/img_1" />

  <View
      android:id="@+id/divider2"
      android:layout_width="409dp"
      android:layout_height="1dp"
      android:background="?android:attr/listDivider"
      app:layout_constraintTop_toBottomOf="@+id/imageView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      tools:layout_editor_absoluteY="318dp" />

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:divider="?android:dividerHorizontal"
      android:orientation="vertical"
      android:showDividers="middle"
      app:layout_constraintBottom_toTopOf="@+id/button2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/divider2">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/bienvenidos_a_la_segunda_activity"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp"
        android:visibility="visible" />
  </LinearLayout>

  <RatingBar
      android:id="@+id/ratingBar2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>